@@ -8,6 +8,7 @@ export(folder)
 export(FT)
 export(GQ)
 export(HR)
+export(HS)
 export(html5)
 export(IM)
 export(LL)
@@ -36,6 +37,7 @@ export(textciteM)
 export(update_bib)
 export(US)
 export(VM)
+export(VS)
 export(YT)
 import(slidify)
 import(xlsx)
