@@ -68,7 +68,7 @@ library(reports); library(qdap); library(acc.roxygen2)
 path <- "C:/Users/trinker/Desktop/reports_dev"
 path2 <- paste0(path, "/index.html")
 rdme <- "C:/Users/trinker/GitHub/reports/inst/extra_statdoc/readme.R"
-expand_statdoc(path2, readme = rdme, to.icon = c("sync_img", "sync_rnp"))
+expand_statdoc(path2, readme = rdme, to.icon = c("sync_img", "sync_rnp", "VS", "VM"))
 
 #STEP 3: move to trinker.guthub
 library(reports)
