@@ -17,7 +17,8 @@ list(
         "CW",
         "GQ",
         "FT",
-        "HR", 
+        "HR",
+        "HS",
         "IM",
         "LL",
         "QC",
